// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty.js 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare module 'autoprefixer';

=====================================output=====================================
declare module "autoprefixer";

================================================================================
`;

exports[`global.js 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
namespace global {}
module global {}
global {}
declare global {}

=====================================output=====================================
namespace global {

}
namespace global {

}
global {

}
declare global {

}

================================================================================
`;

exports[`namespace_function.ts 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
namespace X {
    declare function f();
}

=====================================output=====================================
namespace X {
  declare function f();
}

================================================================================
`;
